corrected contrast errors home page

--- a/final/styles/base.css
+++ b/final/styles/base.css
@@ -278,8 +278,8 @@ ul li {
   text-align: center;
 }
 #info-card .call{
-  background-color: #61a8fa;
-  color: white;
+  background-color: #fdfcdc;
+  color: #3e721d;
 }
 
 #info-card h3 {
